--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <!-- Telegram -->
                 <a href="https://t.me/Ch_Tha002" target="_blank" class="animated-link flex items-center justify-center w-full bg-[#0088cc] text-white font-bold py-3 px-4 rounded-xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-xl border-b-4 border-sky-800" style="animation-delay: 0.6s;">
                      <i class="fab fa-telegram fa-lg mr-3"></i>
-                     <span class="battambang">ចំនេះដឹងIT_BORN_Chantha</span>
+                     <span class="battambang">BORN_Chantha</span>
                 </a>
                 <!-- TikTok -->
                 <a href="https://www.tiktok.com/@thagm.kh?_t=ZS-8zMbWuvsrvF&_r=1" target="_blank" class="animated-link flex items-center justify-center w-full bg-[#00F2EA] text-black font-bold py-3 px-4 rounded-xl shadow-lg transform transition-all duration-300 hover:scale-105 hover:shadow-xl border-b-4 border-cyan-700" style="animation-delay: 0.7s;">
@@ -190,6 +190,7 @@
 
 </body>
 </html>
+
 
 
 
